how to create table and JPA interface

--- a/Spring-10-ORM-TableCreation/src/main/resources/application.properties
+++ b/Spring-10-ORM-TableCreation/src/main/resources/application.properties
@@ -9,6 +9,7 @@
 #spring.h2.console.path=/h2-console
 #spring.h2.console.enabled=true
 
+#postgresSQL Connection
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=admin
@@ -17,8 +18,13 @@ spring.jpa.show-sql=true
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-#spring.sql.init.mode=always
+#to initialize   to add manually, hybernate way
+#1. run without always with create 2. always,create and initia=true
+#create =>  drop and create
 
+#spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.defer-datasource-initialization=true
 
 
