--- a/Spring-11-ORM-Mapping_OneToOne/src/main/resources/application.properties
+++ b/Spring-11-ORM-Mapping_OneToOne/src/main/resources/application.properties
@@ -25,6 +25,5 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=create
 
-spring.jpa.defer-datasource-initialization=true
-
+#spring.jpa.defer-datasource-initialization=true
 
